- Add ZFS sparse volume support.
- Wait response of LAN interface if static with gateway.
- Run umount before iSCSI initiator shutdown.
- Remount all after netif is up for iSCSI device.
- Clear notify after execute now of rsync client/local.
- Increase the number of config backup to 6.
- Confirm permission on temporary directory.
- Remove existing cache and notify at boot.
- Change default AIO size to 4096.
- Change kern.maxfilesperproc to 50000.
- Change default atime of ZFS dataset is on.
- Update SSL certificate and privatekey.
- Add iscsi default values to default config.
- Remove unused hw.ata.to from sysctl.
- Remove AIO disable at boot.
- Add 60days lifetime on ZFS auto snapshot.
- Add ata chipset patch. (VT6420/VT6421)
- Add amdtemp patch.
- Upgrade to FreeBSD 9.1-RC1.
- Upgrade istgt to 20120901.
- Upgrade isboot to 0.2.6.
- Upgrade zoneinfo to 2012f.

Bug fixes:

- Set default timezone.
- Fix broken modifications.
- Fix wrong mount check.
- Remove extra space.
- Fix istgt reload operation is failed.
- Remount zfs dataset after modifying canmount.
- Remove unused empty hosts.
- Add LF to motd.
- Fix missing desc and atime field of ZFS settings.

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.
- Enable 'polling' on interfaces used by a LAGG interface will make it inoperable.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.

NEED TESTING:
- IPv6: auto mode
- All services using IPv6 address (NFS, FTP, etc...)
- Netatalk VFS Samba module (automatically enabled when Netatalk starts) crashes
  samba when accessing to share
- Need to write an online-test procedure

Help needed:
- Need help for adding LDAP authentication feature:
  Main services can be easily authenticated using PAM-LDAP, but is harder for Samba.
