@@ -52,6 +52,7 @@ Bug fixes:
 - Remove unused empty hosts.
 - Add LF to motd.
 - Fix missing desc and atime field of ZFS settings.
+- Remove lock before execute now of rsync client/local.
 
 Permanent restrictions:
 - It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
